<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/loginFragment">

    <fragment
        android:id="@+id/loginFragment"
        android:name="com.inderbagga.fox.ui.login.LoginFragment"
        android:label="@string/login_label"
        tools:layout="@layout/fragment_login"/>

    <fragment
        android:id="@+id/homeFragment"
        android:name="com.inderbagga.fox.ui.home.HomeFragment"
        android:label="@string/home_label"
        tools:layout="@layout/fragment_home"/>

    <fragment
        android:id="@+id/detailFragment"
        android:name="com.inderbagga.fox.ui.detail.DetailFragment"
        android:label="@string/detail_label"
        tools:layout="@layout/fragment_detail"/>
</navigation>